--- a/README.adoc
+++ b/README.adoc
@@ -17,8 +17,8 @@
 
 This Extension allows all MQTT clients to connect to HiveMQ.
 Using this extension is not secure.
-For production usage add an authentication extension and remove the hivemq-allow-all extension.
-Authentication extensions can be found in the marketplace (https://www.hivemq.com/extensions/).
+For production usage, add an appropriate security extension and remove the hivemq-allow-all extension.
+You can download security extensions from the HiveMQ Marketplace (https://www.hivemq.com/extensions/).
 
 === Installation
 
