--- a/README.adoc
+++ b/README.adoc
@@ -1,15 +1,14 @@
 :hivemq-link: https://www.hivemq.com
-:hivemq-extension-docs-link: {hivemq-link}/docs/hivemq/latest/extensions/
 :hivemq-marketplace: {hivemq-link}/extensions/
 :hivemq-support: {hivemq-link}/support/
 
 = HiveMQ Allow All Extension
 
-*Type*: Security
+*Extension Type*: Security
 
 *Version*: 1.0.0
 
-*License*: Apache License Version 2.0
+*License*: Apache License 2.0
 
 == Purpose
 
@@ -18,7 +17,16 @@ Using this extension is not secure.
 For production usage, add an appropriate security extension and remove the hivemq-allow-all extension.
 You can download security extensions from the {hivemq-marketplace}[HiveMQ Marketplace].
 
-== Need help?
+== Need Help?
 
 If you encounter any problems, we are happy to help.
 The best place to get in contact is our {hivemq-support}[support].
+
+== Contributing
+
+If you want to contribute to HiveMQ Allow All Extension, see the link:CONTRIBUTING.md[contribution guidelines].
+
+== License
+
+HiveMQ Allow All Extension is licensed under the `APACHE LICENSE, VERSION 2.0`.
+A copy of the license can be found link:LICENSE[here].
