--- a/README.adoc
+++ b/README.adoc
@@ -4,11 +4,9 @@
 
 = HiveMQ Allow All Extension
 
-*Extension Type*: Security
-
-*Version*: 1.0.0
-
-*License*: Apache License 2.0
+image:https://img.shields.io/badge/Extension_Type-Security-orange?style=for-the-badge[Extension Type]
+image:https://img.shields.io/github/v/release/hivemq/hivemq-allow-all-extension?style=for-the-badge[GitHub release (latest by date),link=https://github.com/hivemq/hivemq-allow-all-extension/releases/latest]
+image:https://img.shields.io/github/license/hivemq/hivemq-allow-all-extension?style=for-the-badge&color=brightgreen[GitHub,link=LICENSE]
 
 == Purpose
 
