--- a/README.adoc
+++ b/README.adoc
@@ -7,6 +7,7 @@
 image:https://img.shields.io/badge/Extension_Type-Security-orange?style=for-the-badge[Extension Type]
 image:https://img.shields.io/github/v/release/hivemq/hivemq-allow-all-extension?style=for-the-badge[GitHub release (latest by date),link=https://github.com/hivemq/hivemq-allow-all-extension/releases/latest]
 image:https://img.shields.io/github/license/hivemq/hivemq-allow-all-extension?style=for-the-badge&color=brightgreen[GitHub,link=LICENSE]
+image:https://img.shields.io/github/actions/workflow/status/hivemq/hivemq-allow-all-extension/check.yml?branch=master&style=for-the-badge[GitHub Workflow Status,link=https://github.com/hivemq/hivemq-allow-all-extension/actions/workflows/check.yml?query=branch%3Amaster]
 
 == Purpose
 
